# aichmou

./: README.md  ai  aichmou.py  azure-ai.py  common.py  mistral.py  pyproject.toml
aichmou/: README.md  __init__.py  args.py  azure.py  chatgpt.py  common.py  gemini.py  mistral.py  openai.py  prompt.py  run.py
aichmou/commands/: __init__.py  gitcommit.py  prompt.py  rephrase.py  spelling.py
aichmou/providers/: abstract_ai.py  azure.py  gemini.py  groq.py  mistral.py  openai.py
misc/: AIChmouTools.alfredworkflow  README.md
src/: abstract_ai.py  azure.py  common.py  mistral.py
