[project]
name = "aichmou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b6",
    "google-generativeai>=0.8.3",
    "groq>=0.13.1",
    "grpcio==1.60.1",
    "mistralai>=1.0.0",
    "openai>=1.58.1",
]

[dependency-groups]
dev = ["ipython>=8.30.0", "isort>=5.13.2"]
